opentofu/aws/template/aws.tf.template
terraform {
    required_version = ">=0.12"
    required_providers {
        aws = {
        source  = "hashicorp/aws"
        version = "~>3.0"
        }
    }
}

provider "aws" {
    region = var.regiondefault
    access_key = var.access_key
    secret_key = var.secret_key
    token = var.token
}

// the netwok where instances will connect
# resource "aws_vpc" "vpc" {
#     cidr_block = "10.11.0.0/16"
#     assign_generated_ipv6_cidr_block = true
    
#     enable_dns_support = true
#     enable_dns_hostnames = true

#     tags = {
#         Name = "tfz-test"
#     }
# }


data "aws_vpc" "vpc" {
  id = var.vpc_id
}

# resource "aws_subnet" "example" {
#   vpc_id            = data.aws_vpc.selected.id
#   availability_zone = "us-west-2a"
#   cidr_block        = cidrsubnet(data.aws_vpc.selected.cidr_block, 4, 1)
# }

// what will provide internet access to the vpc
# resource "aws_internet_gateway" "gw" {
#   vpc_id = data.aws_vpc.vpc.id

#   tags = {
#     Name = "tfz-igw"
#   }
# }

# resource "aws_default_route_table" "myRouter" {
#   default_route_table_id = aws_vpc.vpc.default_route_table_id

#   // All traffic (except for the vpc traffic) goes out using the internet gateway
#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.gw.id
#   }

#   // All traffic (except for the vpc traffic) goes out using the internet gateway
#   route {
#     ipv6_cidr_block = "::/0"
#     gateway_id = aws_internet_gateway.gw.id
#   }

#   tags = {
#     Name = "tfz-default-route"
#   }

# }

resource "aws_subnet" "dualStack-subnet" {
    vpc_id = data.aws_vpc.vpc.id
    cidr_block = "${cidrsubnet(data.aws_vpc.vpc.cidr_block, 4, 4)}"
    map_public_ip_on_launch = true

    ipv6_cidr_block = "${cidrsubnet(data.aws_vpc.vpc.ipv6_cidr_block, 8, 1)}"
    assign_ipv6_address_on_creation = true

    tags = {
        Name = "tfz-dualStack-subnet"
    }
}

resource "aws_security_group" "tfz_allow_k8s" {
  name        = "tfz_allow_k8s"
  description = "Allow K8s communications"
  vpc_id      = data.aws_vpc.vpc.id

  ingress {
    description      = "SSH from VPC"
    to_port          = 22
    from_port        = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP from VPC"
    to_port          = 80
    from_port        = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTPS from VPC"
    to_port          = 443
    from_port        = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "All traffic"
    to_port          = 0
    from_port        = 0
    protocol         = "-1"
    cidr_blocks      = [aws_subnet.dualStack-subnet.cidr_block]
  }


  tags = {
    Name = "tfz_allow_k8s"
  }
}

resource "aws_instance" "myInstance" {
  count         = %COUNT%
  ami           = "ami-03fd334507439f4d1"
  instance_type = "t3.large"

  subnet_id = aws_subnet.dualStack-subnet.id

  key_name = "tferrandiz-key"

  vpc_security_group_ids = [aws_security_group.tfz_allow_k8s.id]

  root_block_device {
    volume_size = 20
    volume_type = "standard"
  }

  user_data = filebase64(%CLOUDINIT%)

  tags = {
    Name = "tofu-tfz-vm${count.index}"
  }
}

# output "vpc_id" {
#     value = aws_vpc.vpc.id
# }

output "subnet_id" {
    value = aws_subnet.dualStack-subnet.id
}

output "publicIP" {
    value = aws_instance.myInstance[*].public_ip
}
